--- a/docs/03/S03.03.tag-n-push.md
+++ b/docs/03/S03.03.tag-n-push.md
@@ -54,6 +54,14 @@ docker push username/image:tag
 
 Vous allez publier maintenant votre image `my_nginx_alpine:v1` sur Docker Hub
 
+### Le process: login, tag et push
+
+Le process pour publier une image locale sur Docker Hub consiste en :
+
+- docker **login**
+- docker **tag** local-image-name your-username/repository-name:tag
+- docker **push** your-username/repository-name:tag
+
 ### Créez votre compte et repo docker
 
 - allez sur [https://docker.com](docker.com) et créez votre compte si vous n'en avez pas déjà un.
@@ -77,7 +85,7 @@ Par exemple:
 Je tagge l'image locale `my_nginx_alpine:v1` avec:
 
 ```bash
-docker tag my_nginx_alpine:v1 skatai/ynov-docker:v1
+docker tag my_nginx_alpine:v1 skatai/ynov-docker:my_nginx_alpine-v1
 ```
 
 Cette image apparait avec ses différents alias lorsque l'on fait `docker images`
@@ -91,8 +99,52 @@ docker login
 Enfin publiez l'image sur Docker Hub avec `docker push`
 
 ```bash
-docker push skatai/ynov-docker:v1
+docker push skatai/ynov-docker:my_nginx_alpine-v1
 ```
+
+### Le nom, le tag et le repository
+
+En local, l'image a un nom `my_nginx_alpine` et un tag `v1` qui illustre la version de l'image.
+
+On a 2 stratégies pour stocker les images sur Docker Hub.
+
+- 1 repo et plusieurs applications et leurs images
+
+```bash
+<account>/<account_main-repo>:<tag liés aux images des applications>
+```
+
+- une repo par application, chaque repo contient seulement les images de l'application en question
+
+- `<account>/<repo-application>:<versions des images liées à l'application>`
+- `<account>/<autre_repo-application>:<versions des images liées à l'autre application>`
+
+#### 1 repo, plusieurs applications
+
+Dans le repository, le nom local et le tag se  merge en un nouveau tag `my_nginx_alpine-v1`.
+
+Dans la commande tag: on nomme l'image avec son identifiant en remote
+
+```bash
+docker tag <local_image_name>:<local_image_tag>  <account_name>/<repo_name>:<remote_tag>
+```
+
+où '<remote_tag>' = `<local_image_name>-<local_image_tag>`
+
+Cela permet de stocker plusieurs images dans le même repository mais le nom de l'image en remote est mergé avec le tag.
+
+#### Une repo par projet
+
+En fait, il est plus habituel d'avoir un repository par application. Le nom du repository devient alors le nom de l'appli cad le nom de l'image et le tag de l'image reste le tag (version, latest, ...).
+
+Par exemple:
+
+- skatai/nginx-demo:01
+- skatai/hello-world:latest
+
+Cependant, il n'est pas possible d'utiliser la commande docker pour creer des repositories sur Docker hub.  Il faut passer par l'interface web.
+
+Comme nous allons créer plusieurs applications il est plus simple de les stocker toutes dans le même repository en jouant sur la composition du tag de l'image.
 
 ## En quoi consiste le push d'une image ?
 
