--- a/docs/04/S04.02.images.optimisation.md
+++ b/docs/04/S04.02.images.optimisation.md
@@ -360,3 +360,5 @@ Le fichier `.env` n'est disponible que dans le container quand il run mais pas d
 ## Lectures
 
 - <https://medium.com/@arif.rahman.rhm/choosing-the-right-python-docker-image-slim-buster-vs-alpine-vs-slim-bullseye-5586bac8b4c9>
+
+- CMD vs Entrypoint <https://medium.com/@mrdevsecops/dockerfile-cmd-vs-entrypoint-78b219d55df0>
