--- a/docs/04/S04.03.questions-app.md
+++ b/docs/04/S04.03.questions-app.md
@@ -195,6 +195,8 @@ docker exec -it 99ee30a14b5b /bin/sh
 
 On utilise /bin/sh et non /bin/bash car le bash n'est pas installé sur les image slim.
 
+Vous pouvez verifier que le fichier .env n'est pas dans le container.
+
 ## Modifier le code
 
 On va maintenant modifier le code et voir la modification apparaitre dans l'application
@@ -215,11 +217,11 @@ pour verifier que tout fonctionne, allez dans le fichier app.py et modifiez le c
 
 De meme ajoutez un personnage dans le fichier character_prompts.json il doit apparaitre dans le menu déroulant apres avoir rechargé la page.
 
-### Rechargement
+### Rechargement automatique de la page
 
 Streamlit dispose d'une fonction de reload automatique de la page. Pour l'activer il faut ajouter un fichier `config.toml` qui contient les lignes suivantes
 
-1. **Ajouter un fichier `config.toml` (optionnel)** : Vous pouvez créer un fichier de configuration Streamlit dans le dossier de votre projet pour vous assurer que le rechargement automatique est activé.
+**Ajouter un fichier `config.toml` (optionnel)** : Vous pouvez créer un fichier de configuration Streamlit dans le dossier de votre projet pour vous assurer que le rechargement automatique est activé.
 
    Créez un fichier `.streamlit/config.toml` :
 
