01 intro, install, welcome

--- a/docs/01/S01.01.intro.md
+++ b/docs/01/S01.01.intro.md
@@ -23,13 +23,12 @@ Les supports de cours seront aussi mis à disposition sur le Moodle de Ynov.
 
 8 Sessions (S01, ... S08) réparties sur 4 journées: 8 et 9 octobre, 29 oct et 18 Novembre.
 
-Chaque session suit le principe
+Chaque session ou demi journée suit le principe
 
 * 1 sujet par session
 * intro et recap de ce que l'on a vu précédemment
 * TD sur le cours précédent
 * Cours sur le sujet de la session
-* (Ticket de sortie)
 
 Le but est de vous faire pratiquer le plus possible.
 
@@ -44,7 +43,7 @@ La note finale sera composée de 50% (les meilleures notes de TD) + 50% (le proj
 
 ## Comment organiser votre travail
 
-Creez un répertoire unique pour le cours
+Créez un répertoire unique pour le cours
 
 ```bash
 /cours-docker
@@ -81,7 +80,7 @@ Au final la structure est:
 On travaille dans le terminal à 95%
 
 * mac: iTerm
-* Windows: WSL
+* Windows: WSL ou Git Bash
 
 ## Pré-requis
 
@@ -105,7 +104,7 @@ et si nous avons le temps
 
 * déployer une application dockerisée sur Azure
 
-> S'il y a des sujets que vous souhaitez aborder, n'hésitez pas à me le dire. (liés à Docker)
+> S'il y a des sujets que vous souhaitez aborder, n'hésitez pas à me le dire.
 
 ## But du cours
 
@@ -115,7 +114,7 @@ et si nous avons le temps
 
 Mais tout d'abord pour mieux vous connaitre, quelques questions
 
-* aucune réponse n'est obligatoire
 * il n'y a pas de mauvaise réponse
+* questions et commentaires sont bienvenus
 
 <https://forms.gle/44jJWQHfEwGGfhfo8>
