--- a/docs/01/S01.04.premiers-pas-docker.md
+++ b/docs/01/S01.04.premiers-pas-docker.md
@@ -3,15 +3,21 @@
 Dans ce document:
 
 - on analyse les conséquences de la commande ```docker run -d -p 8080:80 docker/welcome-to-docker```
-- hash string et une hash fonction
+- On parle de hash strings et de fonctions hash
 
 ## Que fait ```docker run``` ?
 
-Revennons sur la sortie dans le terminal de la commande:
+Revenons sur la sortie dans le terminal de la commande:
 
 ```bash
 docker run -d -p 8080:80 docker/welcome-to-docker
 ```
+
+Ici:
+
+- `docker/welcome-to-docker` est le nom d'une image
+- `docker run` est la commande pour créer et executer un container a partir de cette image
+- `-d` et `-p` sont des flags de configuration
 
 On a
 
@@ -34,32 +40,33 @@ e6780a6285cf019b4637ca1bd99f612911a49e6ba7e9069cec35f79793bfae23
 
 - La première ligne montre que docker va essayer de récupérer (pull) l'image ```docker/welcome-to-docker``` localement et qu'il ne la trouve pas.
 - Donc il va la récupérer a partir d'un repository en ligne (**docker hub**)
-- Il récupère ensuite pas moins de 8 elements.
-  - Les strings de type _740091335c74_ sont les **hash** liés aux éléments récupérés.
+- Il récupère ensuite pas moins de 8 éléments.
+  - Les strings de type _740091335c74_ sont les **hash** liés aux éléments récupérés. En quelque sorte des identifiants uniques
 - `Status:...` Il confirme que l'image la plus récente a bien été récupérée.
 - Et il donne 2 longs hash d'identification:
   - le premier: ```Digest: sha256:eedaff45e3c78538087...``` correspond au **manifest** de l'image (fichier JSON auto généré qui décrit les composants de l'image).
-  - le deuxième est le hash d'identification du container
+  - le deuxième est le hash d'identification du container : 'e6780a...'
 
 Donc pas mal de chose et surtout beaucoup de hash strings!
 
 ## HASH string et fonctions de Hashing
 
-Une fonction de hashing est un algorithme qui prends un chaîne de caractères en entrée et qui produit une chaîne de caractère appelée HASH de taille déterminée.
+Une fonction de hashing est un algorithme qui prends un chaîne de caractères en entrée (ou un contenu binaire) et qui produit une chaîne de caractère appelée HASH qui est de de taille déterminée.
 
 ![Hash Function](./../../img/hash-function.png)
 
-La [fonction de hashing](https://fr.wikipedia.org/wiki/Fonction_de_hachage) (hachage en français :( ) a des propriétés très spécifiques:
+La [fonction de hashing](https://fr.wikipedia.org/wiki/Fonction_de_hachage) (hachage en français 🥹 ) a des propriétés très spécifiques:
 
 - **Déterministe** : la même entrée produit toujours la même sortie
 - **Rapide** : le calcul du HASH est super rapide pour pouvoir être appliqué à des volumes importants de données.
-- **Distribution uniforme** : (tous les symboles sont utilisés avec la même fréquence)
+- **Distribution uniforme** : tous les symboles sont utilisés avec la même fréquence
 - **Effet d'avalanche** : un petit changement dans le contenu en entrée change fortement le HASH en sortie.
 
-Mais surtout
+Mais surtout :
 
-- **unicité**: la probabilité pour que 2 textes différents ait le même hash (risque de collision) est de 1 sur 3.4 x 10^38.
-Donc si on peut générer  1 Milliard de hashes par second, on aurait 50% de chance d'avoir une collision en 10^19 années. Par comparaison l'âge de l'univers est de 1.38×10^10!
+- **unicité**: la probabilité pour que 2 textes différents aient le même hash  est de 1 sur 3.4 x 10^38. On appelle ça le risque de collision.
+
+Une probabilité de 1 sur 3.4 x 10^38 revient à dire que si on pouvait générer 1 Milliard de hashes par second, on aurait 50% de chance d'avoir une collision en 10^19 années. Par comparaison l'âge de l'univers est de 1.38×10^10!
 
 - **transformation à sens unique** : il est impossible de retrouver le contenu original a partir du simple hash! parfait pour stocker les mots de passe de façon sécurisée
 
@@ -70,6 +77,10 @@ Les HASH strings sont utilisées dans de nombreux domaines
 3. Intégrité des données : Sommes de contrôle : Détecter les modifications accidentelles des données lors de la transmission ou du stockage.
 4. Mise en cache : Utiliser des hachages comme clés pour stocker et récupérer des données en cache.
 5. Technologie blockchain : Preuve de travail : Fondamentale pour de nombreux algorithmes de minage de cryptomonnaies.
+
+et Git!
+
+### Fonctions de hash
 
 Il existent de multiples fonctions Hash qui diffèrent par leur qualité: SHA256, MD5, ...
 
@@ -85,9 +96,10 @@ Il existent de multiples fonctions Hash qui diffèrent par leur qualité: SHA256
 | CRC32      | 32                 | Extremely Fast  | Not Secure   | Error detection                       |
 | MurmurHash | 32/128             | Extremely Fast  | Not Secure   | Hash tables, caches                   |
 
-Donc en résumé le **hash string** est un **identifiant universellement unique** d'un contenu, fichier, texte etc...
+Donc en résumé
 
-Il est impossible de retrouver le contenu original à partir de son HASH string
+- Le **hash string** est un **identifiant universellement unique** d'un contenu, fichier, texte etc...
+- Il est impossible de retrouver le contenu original à partir de son HASH string
 
 ## De retour à Docker
 
@@ -104,11 +116,14 @@ se décompose de la façon suivante:
 - ```-p 8080:80``` :  un mapping de port: celui interne au container: 80  qui est ainsi lié au port externe 8080. C'est sur ce port **8080** qu'on accède au service offert par l'image via l'url ```http://localhost:**8080**```
 - Le nom de l'image ```docker/welcome-to-docker```
 
-notez que docker essaie de trouver non pas ```docker/welcome-to-docker``` mais ```docker/welcome-to-docker:latest```. **latest** est un tag de version. Par défaut pour un nom d'image donné, docker va chercher la version la plus récente qui est taggé  par le mot **latest**.
+Notez que docker essaie de trouver non pas ```docker/welcome-to-docker``` mais ```docker/welcome-to-docker:latest```. **latest** est un tag de version. Par défaut pour un nom d'image donné, si on ne spécifie pas le tag de version docker va chercher la version la plus récente qui est taguée par le mot **latest**.
+
+- `docker run ubuntu` ~= `docker run ubuntu:latest``
+- `docker run ubuntu:22.04`
 
 ## CLI
 
-On peut lister le container et l'image en ligne de commande (CLI command line interface) avec
+On peut lister les containers et les images disponible sur l'ordi, en ligne de commande (CLI: command line interface) avec
 
 ### ```docker images```
 
@@ -118,10 +133,10 @@ REPOSITORY                 TAG       IMAGE ID       CREATED         SIZE
 docker/welcome-to-docker   latest    c1f619b6477e   10 months ago   18.6MB
 ```
 
-on retrouve
+on retrouve:
 
-- le nom de l'image: docker/welcome-to-docker
-- le tag: latest
+- le nom de l'image: `docker/welcome-to-docker`
+- le tag: `latest`
 - l'image ID. Ici le hash correspond au fichier executable intégrale de l'image (pas son manifeste)
 - la date de création de l'image
 - sa taille
@@ -146,17 +161,17 @@ e6780a6285cf   docker/welcome-to-docker   "/docker-entrypoint.…"   ...
 - On trouve aussi le mapping entre les ports: externe -> interne : ```0.0.0.0:8080->80/tcp```
 - enfin un nom aléatoire qui a été assigné au container par docker. ```hungry_snyder```
 
-Donc à retenir: ```docker ps``` pour lister les containers (en cours d'éxécution).
+Donc à retenir: ```docker ps``` pour lister les containers (qui sont en cours d'éxécution).
 
-Pour lister tout les containers meme ceux arretés, on ajoute `-all`
+Pour lister tout les containers meme ceux arrêtés, on ajoute `-all`
 
 ```bash
 docker ps -a
 ```
 
-## et docker desktop dans tout ça ?
+## et Docker Desktop dans tout ça ?
 
-La ligne de commande c'est super mais on a aussi **Docker Desktop**
+La ligne de commande, c'est super mais on a aussi **Docker Desktop**
 
 On y retrouve bien les informations données par ```docker images```
 
@@ -175,9 +190,9 @@ Dans la suite on utilisera la ligne de commande le plus possible mais docker des
 A ce stade vous devriez:
 
 - comprendre que docker va changer votre vie
-- avoir installé Docker Desktop, WSL
-- avoir exécuté le container  hello world a partir de l'image ... hello world
-- savoir gérer les containers (ps, start, stop) et les images en ligne de commande
+- avoir installé Docker Desktop, WSL2
+- avoir exécuté le container  `hello world` à partir de l'image ... hello world
+- savoir lister et gérer les containers (ps, start, stop) ainsi que les images en ligne de commande
 - retrouver les information d'un container ou d'une image dans Docker Desktop
 - comprendre la différence entre image et containers
 
