--- a/docs/02/S02.01.intro.md
+++ b/docs/02/S02.01.intro.md
@@ -15,7 +15,7 @@ On va plonger dans le monde de Linux.
 
 Pourquoi ?
 
-- Parce que Docker est construit sur linux
+- Parce que Docker est construit sur Linux
 - Les 2 tiers ou plus des serveurs web sont du Linux
 - La majorité des images docker sont construites sur une image de base linux
 
@@ -29,9 +29,9 @@ Donc Linux c'est
 - les mobiles (android est du linux)
 - la science : NASA, CERN etc
 
-au programme
+Au programme :
 
 - faire tourner un container linux simple avec des commandes
 - publier une image sur Docker Hub
-- un tuto sur linux
+- un tutoriel sur linux
 - des exercices
