--- a/docs/02/S02.02.docker-linux.md
+++ b/docs/02/S02.02.docker-linux.md
@@ -13,18 +13,18 @@ Il y a plus de 600 distributions Linux active.
 - Ubuntu est la plus répandu avec 34%
 - suivi par Debian.
 
-Dans un terminal, exécutez la commande docker run en spécifiant l'image, et une commande à exécuter dans le container.
+Dans un terminal, exécutez la commande `docker run` en spécifiant l'image, suivi d'une commande `/bin/bash` qui sera exécutée dans le container.
 
 ```bash
 docker run -i -t ubuntu /bin/bash
 ```
 
-Cette commande est composée de
+Cette commande est composée de :
 
 - `docker run` pour lancer un container
-- `-it` des flags de configuration
+- `-it` des flags de configuration (pour pourvoir accéder au shell dans la même session du terminal)
 - le nom de l'image `ubuntu`
-- la commande à executer dans le container `/bin/bash` qui ouvre une session dans un terminal
+- la commande à executer dans le container `/bin/bash` et qui ouvre une session dans un terminal
 
 Docker:
 
