--- a/docs/01/S01.02.pourquoi-docker.md
+++ b/docs/01/S01.02.pourquoi-docker.md
@@ -30,18 +30,21 @@ Donc docker c'est ce qui permet de passer du stade _amateur_ au niveau **profess
 
 Quelques réponses à la question : [un développeur doit-il apprendre docker](https://www.reddit.com/r/docker/comments/s18o83/is_it_worth_it_to_invest_time_learning_docker_as/) ?
 
-> As a CTO, docker is the second thing I look for after experience with the core language the team is using. Why? Because any entry level dev can write an app that works on their laptop.
-[...]. My current team uses docker to **replicate the entire stack locally**. We want to reduce the variance from our test env and our prod env.
-
-En français
-> En tant que CTO, Docker est la 2eme chose que je recherche après l'expérience avec le langage principal utilisé par l'équipe. Pourquoi ? Parce que n'importe quel développeur débutant peut écrire une application qui fonctionne sur son ordinateur portable. [...] Mon équipe  utilise Docker pour **répliquer l'intégralité de la stack en local**. Nous voulons réduire les écarts entre notre environnement de test et notre environnement de production.
-
-ou
 > Most definitely, not **polluting** your machine with app-specific setup is a huge **time/headache saver**.
 
 soit
 
 > ne pas polluer sa machine avec des configurations spécifiques à l'application est un énorme gain de temps et d'énergie.
+
+Pour le CTO:
+
+> As a CTO, docker is the second thing I look for after experience with the core language the team is using. Why? Because any entry level dev can write an app that works on their laptop. [...]. My current team uses docker to **replicate the entire stack locally**. We want to reduce the variance from our test env and our prod env.
+
+En français:
+
+> En tant que CTO, Docker est la 2eme chose que je recherche après l'expérience avec le langage principal utilisé par l'équipe. Pourquoi ? Parce que n'importe quel développeur débutant peut écrire une application qui fonctionne sur son ordinateur portable. [...] Mon équipe  utilise Docker pour **répliquer l'intégralité de la stack en local**. Nous voulons réduire les écarts entre notre environnement de test et notre environnement de production.
+
+#### Popularité de Docker
 
 L'enquête [Stack Overflow 2024](https://www.docker.com/blog/docker-stack-overflow-survey-thank-you-2024/):
 
@@ -49,48 +52,45 @@ L'enquête [Stack Overflow 2024](https://www.docker.com/blog/docker-stack-overfl
 
 en français:
 
-> ... Docker est l'outil le plus admiré (78%). ... Docker est l'outil le plus utilisé par les professionnels, avec 59 % d'entre eux l'utilisant dans leur travail.
+> ... Docker est l'outil le plus admiré (78%). ... Docker est l'outil le plus utilisé par les professionnels,  59 % d'entre eux l'utilise dans leur travail.
 
 Donc quand vous êtes en recherche d'emploi, savoir utiliser docker est définitivement un élément qui vous différencie des autres candidats.
 
-En résumé:
+## Pour développer
 
-> Docker  : c'est être vu comme un pro et pas comme un débutant.
+L'idée est d'encapsuler une application dans un truc appelé un **container** qui devient l'objet de base pour le développement, les tests et le déploiement de l'application.
 
-## Dans le développement
-
-Docker provides tooling and a platform to manage the **lifecycle** of your containers:
-
-Docker, est un outil qui gère vos conteneurs de A à Z :
-
-- On **développe** l'appli dans des conteneurs.
-- Le conteneur devient l'unité de base pour **distribuer** et **tester** l'appli.
-- Quand tout est prêt, on peut déployer l'appli en **production**, soit par le biais d'un simple conteneur, de multiples containers ou avec un service d'orchestration comme Docker Swarm ou Kubernetes.
+L'application fonctionne alors dans n'importe quel environnement, sur n'importe quelle machine.
 
 Les conteneurs permettent à un développeur
 
 - d'**encapsuler** une application avec tous ses composants (bibliothèques, dépendances),
 - de tout expédier en un seul package.
 
-Et l'application fonctionne dans dans n'importe quel environnement.
+Et **Docker**, est un outil qui gère vos conteneurs de A à Z :
 
-### Scénarios
-
-- environnement de dev, test, staging, production
-- mise en production
-- evolution des versions des librairies
-- CI/CD
-- onboarding
-- scalability
-- projets open source
-
-## Composants Docker
+1. On **développe** l'appli dans des conteneurs.
+2. Le conteneur devient l'unité de base pour **distribuer** et **tester** l'appli.
+3. Quand tout est prêt, on peut déployer l'appli en **production**, soit par le biais d'un simple conteneur, de multiples containers ou avec un service d'orchestration comme Docker Swarm ou Kubernetes.
 
 ![docker everywhere](./../../img/memes/containers-everywhere.png)
 
-Comment ca marche ? quel est le principe ?
+### Scénarios
 
-On parle d'**images** et de **containers**
+- environnements de dev, test, staging, production
+- mise en production
+- évolution des versions des librairies
+- CI/CD
+- onboarding
+- projets open source
+
+avec comme bénéfices directs: scalabilité, reproductibilité et fiabilité
+
+## Composants Docker
+
+Comment ça marche ? quel est le principe ?
+
+On parle de **containers** et d'**images**.
 
 ### Images
 
@@ -108,21 +108,21 @@ en français
 
 Ce qui n'est pas super super clair.
 
-Un image c'est un fichier dont le rôle est de permettre d'exécuter une application, un service : site web, base de données, API, micro service, ...
+Un image c'est un fichier dont le rôle est de permettre de répliquer une application, un service : site web, base de données, API, micro service, ...
 
 Une image contient:
 
 - un OS (**Linux** la plupart du temps)
-- l'installation des librairies nécessaires
-- de la configuration: clés d'accès, variables d'environnement, configurations réseau
-- l'exécution d'une ou plusieurs commande
+- des étapes d'installation des librairies nécessaires
+- des étapes de configuration: clés d'accès, variables d'environnement, configurations réseau
+- et l'exécution d'une ou plusieurs commande
 
-Exemple:
+#### Exemples
 
 Une image simple
 
 - une image de départ: Ubuntu 22.04
-- une commande: bash
+- une commande: shell
 
 Un site web qui tourne sur Nginx
 
@@ -133,23 +133,25 @@ Un site web qui tourne sur Nginx
 
 Une base de données
 
-- on part d'une image de base avec l'OS ubuntu
+- on part d'une image de base avec l'OS Ubuntu
 - on installe PostgreSQL
 - on crée un volume persistent
 - on ouvre le port 5432
-- on importe credentials d'accès
+- on importe les credentials d'accès
 - on lance le serveur PostgreSQL
 - on lance le monitoring du serveur en parallèle
 
-donc **l'image**, c'est un fichier qui une fois exécuté va permettre de faire tourner l'application.
+donc **l'image**, c'est un fichier qui une fois _exécuté_ (**run**) va permettre de faire tourner l'application.
 
-On `build` une image.
+On `build` une image à partir de spécifications précises.
 
-C'est la même idée de base qu'une machine virtuelle (avec des différences importantes)
+C'est un peu la même idée qu'une machine virtuelle avec quelques différences importantes.
 
 ### Containers
 
-Un container est une instance d'exécution de l'image.
+A partir d'une image, on crée un container.
+
+Un container est une **instance** d'exécution de l'image.
 
 A partir d'une image unique on peut avoir plusieurs containers qui exécute la même image.
 
@@ -159,23 +161,29 @@ Ce qui est tout de suite très intéressant pour déployer des applications sur 
 
 On ```start | stop | delete``` un container.
 
-### parallèle avec la notion de classe et d'object
+#### Scalability
 
-Les images docker et leurs containers associés ressemblent au concept de classe et d'objet.
-Une image est comme une classe à partir de laquelle on instancie des objets en nombre illimité.
+Au delà du bon fonctionnement de l'application sur une machine donnée de façon fiable et reproductible, Docker permet de **deployer** facilement une application de façon automatique sur plusieurs serveurs. C'est l'aspect scalabilité.
+
+### Parallèle avec la notion de classe et d'object
+
+Les images docker et leurs containers associés suivent le concept de classe et d'objet.
+
+Une image est comme une classe à partir de laquelle on instancie des objets en nombre illimité, les containers.
 
 ### Isolation des containers
 
-Un container existe par lui même indépendamment de la machine sur laquelle il tourne.
+Un container existe par lui même indépendamment de la machine sur laquelle il tourne. On dit qu'il est isolé de la machine hôte.
 
-On dit qu'il est isolé de la machine hôte.
+C'est tout l'intérêt qu'il y a à travailler avec des containers.
 
-Donc quand on supprime un container, son état (state) de fonctionnement et les données  qui lui sont propres disparaissent avec lui.
+Par contre, quand on supprime un container, son état (state) de fonctionnement et les données  qui lui sont propres disparaissent avec lui.
 
 Mais on peut attacher ou relier un container à du storage et lui donner accès à un réseau pour rendre les données persistantes au delà de la vie du container.
 
 Il est donc possible de faire tourner des containers en parallèle sur sa machine.
-Chaque containers est indépendant des autres et de la machine hôte.
+
+En résumé : **Chaque container est indépendant des autres et de la machine hôte.**
 
 ### Du container à l'image
 
@@ -186,20 +194,22 @@ par exemple:
 - On part d'une image linux (ubuntu).
 - On execute le container basé sur cette image
 - On rentre dans le container pour installer des librairies
-- On sauve le container comme une nouvelle image
+- On sauve le container en tant que nouvelle image
 
 On peut ensuite démarrer un nouveau container à partir de cette nouvelle image.
 
 ### Dockerfile
 
-Plutôt que de toujours devoir partir d'une image simple (OS) qui de la construire instruction par instruction, on utilise un fichier  intitulé ```Dockerfile```
+Le Dockerfile est le fichier de specification de l'image.
 
-```Dockerfile``` un fichier au format texte de création d'une image Docker qui contient:
+Plutôt que de toujours devoir partir d'une image simple (OS) puis de la modifier manuellement instruction par instruction, on utilise un fichier de specifications intitulé ```Dockerfile```
+
+```Dockerfile``` un fichier au format texte, de création d'une image Docker qui contient:
 
 - la déclaration d'une image de départ
 - les installations successives
 - le setup réseaux, storage, accès
-- les commandes d'execution
+- les commandes d'exécution
 
 ## Registry: stockage des images
 
@@ -240,6 +250,16 @@ Le premier blog post date de juillet 2013 <https://www.docker.com/blog/how-to-us
 
 Solomon Hykes crée ensuite la version commerciale de Docker en 2014. Il y a 10 ans.
 <https://www.zdnet.com/article/docker-1-0-brings-container-technology-to-the-enterprise/>
+
+## Conclusion
+
+- Une image permet de répliquer intégralement une application.
+- On construit une image à partir d'un fichier d'instructions appelé Dockerfile
+- L'instance d'une image est un container.
+- Le container permet à l'application de fonctionner indépendamment de la machine host.
+- Le container est éphémère.
+
+- rapidité, fiabilité et scalabilité.
 
 ## Liens et lectures
 
