minor updates & pdf

--- a/docs/02/S02.04.linux.md
+++ b/docs/02/S02.04.linux.md
@@ -155,10 +155,16 @@ Root est le super user. Il peut tout faire.
 
 Il peut même supprimer tout avec la fameuse commande
 
+**Attention à ne jamais executer cette commande!**
+**Attention à ne jamais executer cette commande!**
+**Attention à ne jamais executer cette commande!**
+
 ```bash
 rm -rf /
 ```
 
+**Attention à ne jamais executer cette commande!**
+**Attention à ne jamais executer cette commande!**
 **Attention à ne jamais executer cette commande!**
 
 Normalement, on ne travaille jamais sur le compte `root`. Jamais.
@@ -196,28 +202,29 @@ exit
 Pour se déplacer dans les repertoires on utilise les commandes
 
 - `pwd`: Path to Working Directory: le repertoire courant
-- `ls`: liste les fichiers. Utile avec les flags -al et -alh. un alias est souvent disponible : `ll`
+- `ls`: liste les fichiers. Utile avec les flags `-al` et `-alh`. un alias est souvent disponible : `ll`
 - `cd`: change directory
 
-Notes: ces commandes ont été importé dans powershell.
+Notes: ces commandes ont été importées dans `powershell`.
 
 Quelques commandes pour les fichiers et répertoires:
 
 - `mkdir <directory>` : créer un répertoire
 - `touch <file>`:  crée un fichier vide
-- `cp (-r -f) <file> <directory>`: Pour copier fichiers et répertoires
-- `mv <file> <directory>`: déplacer et **renommer** fichiers et répertoires
+- `cp  <file> <directory>`: Pour copier fichiers et répertoires (avec `-r`)
+- `mv <file | directory> <file | directory>`: déplacer et **renommer** fichiers et répertoires
 - `rm, rmdir`: supprimer fichiers et répertoires
 
 ### noms de fichiers
 
- Il y a des règles à respecter dans le nomage des fichiers et répertoires
+ Il y a des règles à respecter dans le nom des fichiers et répertoires
 
 - Case sensitive: `Truc.txt` et `truc.txt` sont deux fichiers différents
-- n'utiliser que: (a-z, A-Z), numbers (0-9), periods (.), underscores (_), and hyphens (-). le premier character ne doit pas être un '-'
-- PAS d'espace dans le noms de fichiers. Vraiment! C'est juste pas cool!
+- n'utiliser que: (a-z, A-Z), numbers (0-9), points (.), underscores (_) tiret 8, et hyphens / tiret 6 (-).
+- le premier character ne doit pas être un '-'
 - Ne pas utiliser les caractères spéciaux comme: `*, &, %, $, #, @, !,`
 - Les fichier cachés débutent par un '.'
+- PAS d'espace dans le noms de fichiers. Vraiment! C'est juste  ....
 
 Exemples à éviter:
 
@@ -226,6 +233,8 @@ My Project Report (Final Version).pdf  # espaces
 2023_$ales_Data.csv  # caractere special
 -start-with-hyphen.txt  # commence par un -
 ```
+
+### Home
 
 Allez dans le répertoire `/home/`, répertoire des comptes utilisateurs et faites `ls -al` :
 
@@ -266,27 +275,29 @@ Voici les premières lignes de chaque fichier
 
 Quand on accède à une nouvelle session dans le terminal, avec ou sans login (SSH. console login, virtual console), le shell / bash lit le fichier `.profile` ou `.bashrc`.
 
-> c'est la même chose sur le mac. il y a un fichier .zshrc qui est lu a chaque nouvelle session dans le terminal. Sur Windows, il y a un équivalent situé: `~\Documents\PowerShell\Microsoft.PowerShell_profile.ps1`.
+> c'est la même chose sur le mac. il y a un fichier `.zshrc` qui est lu à chaque nouvelle session dans le terminal.
+
+Sur Windows, il y a un équivalent: `~\Documents\PowerShell\Microsoft.PowerShell_profile.ps1`.
 
 ### Afficher le contenu d'un fichier dans le terminal
 
-Pour voir les N premieres ou N dernieres lignes d'un fichier on utilise
+Pour voir les N premieres ou N dernières lignes d'un fichier on utilise `head` et `tail`
 
 - `head -n N <nom du fchier>`
 - `tail -n N <nom du fchier>`
 
-on peut enchainer les commandes avec le symbole pipe '|'
+On peut enchainer les commandes avec le symbole pipe `|`
 
 ```bash
 head -n 200 fichier.txt | tail -n 10
 ```
 
-Donne les 10 lignes 190 a 199 du fichier
+Cette commande donne les 10 lignes de 190 à 199 du fichier.
 
-C'est très utile pour afficher en continu un fichier de log au fur et a mesure des opérations:
+Avec le flag `-f`, on peut afficher en continu un fichier de log au fur et a mesure des opérations:
 
 ```bash
-tail -f  -n 100 <log file>
+tail -f -n 100 <log file>
 ```
 
 Cela affiche les 100 dernières lignes du fichier log en streaming / continu.
@@ -298,10 +309,11 @@ Pour modifier, éditer un fichier on utilise `vim` ou `nano`.
 `vim` n'est pas inclut par défaut dans ubuntu. On l'installe avec `apt-get`
 
 ```bash
+apt-get update &&
 apt-get install vim
 ```
 
-Note pour trouver le nom d'un package on utilise `apt-cache search <nom du package>`
+Note; pour trouver le nom d'un package on utilise `apt-cache search <nom du package>`
 
 On édite un fichier avec
 
@@ -332,7 +344,7 @@ Je conseille les tutos suivants pour démarrer:
 
 ### Question
 
-Dans le répertoire ubuntu, on a la config du user `ubuntu` : `.bashrc`, `.profile` etc ...
+Dans le répertoire `/home/ubuntu`, on a la config du user `ubuntu` : `.bashrc`, `.profile` etc ...
 
 Mais on s'est connecté avec `root`.  Où se trouve donc le fichier `.bashrc` de root ?
 
@@ -361,18 +373,6 @@ dont `.bash_history` qui contient l'historique des commandes.
 
 Autre commande super puissante : `grep`
 
-```bash
-grep [OPTION]... PATTERNS [FILE]
-```
-
-Par exemple trouver les alias (les raccourcis commandes) dans le fichier .bashrc
-
-```bash
-grep alias .bashrc
-```
-
-retourne les ligne qui contiennent le mot **alias**
-
 Le format générale de `grep` est :
 
 ```bash
@@ -381,10 +381,18 @@ Search for PATTERNS in each FILE.
 Example: grep -i 'hello world' menu.h main.c
 ```
 
-Exercice:
+Par exemple trouver les `alias` (les raccourcis commandes) dans le fichier .bashrc
+
+```bash
+grep alias .bashrc
+```
+
+retourne les ligne qui contiennent le mot ... **alias**
+
+#### Exercice
 
 - utilisez `cat` et `grep` pour retrouver une commande particulière dans .bash_history.
-- CTRL+R marche aussi
+- `CTRL+R` marche aussi
 
 ## 5. File Permissions and Ownership
 
@@ -406,7 +414,7 @@ ensuite on distingue 3 blocks (owner, group, other) de 3 caractères
 
 Si a la place du `r`, `w` ou `x`, on a un `-`: le fichier n'est ni lisible, ni modifiable, ni exécutable pour le owner, le groupe ou tout le monde
 
- ⛔️⛔️⛔️ Un fichier avec `-rwxrwxrwx` est lisible, modifiable et surtout executable par tous les utilisateurs. très dangereux. 🧨🧨🧨
+ ⛔️⛔️⛔️ Un fichier avec `-rwxrwxrwx` est lisible, modifiable et surtout executable par tous les utilisateurs. **très dangereux**. 🧨🧨🧨
 
 On voit aussi:
 
@@ -414,7 +422,7 @@ On voit aussi:
 
 ### Exemple
 
-par exemple, si on crée un nouveau fichier avec  `touch fichier.txt`, ce fichier aura un niveau de permissions assez restrictif:
+par exemple, si on crée un nouveau fichier (vide) avec  `touch fichier.txt`, ce fichier aura un niveau de permissions assez restrictif:
 
 ```bash
 -rw-r--r-- 1 root   root      0 Sep 26 09:53 fichier.txt
@@ -450,7 +458,7 @@ Sur d'autres distributions linux, le nom du package manager peut être différen
 
 L'installation d'une programme est toujours en 2 temps:
 
-1. mettre a jour l'index du package manager pour qu'il ait connaissance de l'existence de la version la plus récente du programme.
+1. mettre à jour l'index du package manager pour qu'il ait connaissance de l'existence de la version la plus récente du programme.
 
 ```bash
 sudo apt-get update
@@ -503,7 +511,7 @@ d'abord toujours par mettre à jour la liste des packages avec:
 apt-get update
 ```
 
-> Note:
+> Important:
 `apt-get upate` n'installe rien. Pour mettre à jour tous les programmes déjà installé, on fait ensuite  `apt-get upgrade`.
 
 Ensuite on installe `wget` avec: `apt-get wget` et enfin on peut downloader le fichier
@@ -529,9 +537,9 @@ En utilisant `cat`, `head` et `tail` ainsi que le pipe `|`, affichez :
   - "Youssou N'Dour"
 
 - Changez le `owner` de WorldHits.csv pour `ubuntu` avec `chown`
-- changez les permissions de WorldHits.csv pour que le fichier soit writable par tous le monde: `-rw-rw-rw-`
+- changez les permissions de WorldHits.csv pour que le fichier soit writable par tout le monde: `-rw-rw-rw-`
 
-Hint: regardez dans le manuel avec `man chown` et `man chown`
+Hint: regardez dans le manuel avec `man chown` et `man chmod`
 
 ### Recap
 
