--- a/docs/02/S02.05.linux-cowsay.exercice.md
+++ b/docs/02/S02.05.linux-cowsay.exercice.md
@@ -45,9 +45,9 @@ whereis cowsay
 > `which cowsay` This command searches for the cowsay executable in the directories listed in your $PATH environment variable. It only returns the path to the executable if it's found in one of those directories.
 > `whereis cowsay`: This command searches for the cowsay executable, along with its source code and man pages, in standard locations (not just $PATH). It returns the path to the binary, source, and man page if available.
 
-Donc si `which cowsay` ne retourne rien, c'est que le répertoire n'est pas dans le PATH.
+Donc si `which cowsay` ne retourne rien, c'est que le répertoire parent n'est pas dans le PATH.
 
-Il faut ajouter le path `/usr/games/` où se trouve le programme `cowsay`  à la variable d'environnement PATH.
+Pour que `cowsay` fonctionne, Il faut ajouter le path `/usr/games/` où se trouve le programme `cowsay`  à la variable d'environnement PATH.
 
 ### ajouter un path au `PATH`
 
@@ -67,7 +67,7 @@ cowsay "bonjour le monde"
 
 Ça marche!
 
-et avec le pingouin
+et avec le pingouin linux
 
 ```bash
 cowsay -f tux "bonjour le monde"
