--- a/docs/02/S02.04.linux.md
+++ b/docs/02/S02.04.linux.md
@@ -512,7 +512,7 @@ apt-get update
 ```
 
 > Important:
-`apt-get upate` n'installe rien. Pour mettre à jour tous les programmes déjà installé, on fait ensuite  `apt-get upgrade`.
+`apt-get update` n'installe rien. Pour mettre à jour tous les programmes déjà installé, on fait ensuite  `apt-get upgrade`.
 
 Ensuite on installe `wget` avec: `apt-get wget` et enfin on peut downloader le fichier
 
