--- a/docs/03/S03.02.lab.nginxserver.md
+++ b/docs/03/S03.02.lab.nginxserver.md
@@ -17,8 +17,8 @@ Dans cet exercice vous allez:
 
 Tout au long du tuto
 
-- demandez vous le pourquoi de chaque opération
-- pensez à verifier l'action de chaque commande.
+- demandez-vous le pourquoi de chaque opération
+- pensez à verifier le résultat de chaque commande
 
 Dans la suite, il faut noter que :
 
@@ -66,7 +66,7 @@ Une fois dans la session shell, répondez à ces quelques questions
 - allez dans `/home`. Quel sont les utilisateurs du système ?
 - allez dans `/root` et listez les fichiers.
 - qu'est ce qui est different par rapport à la distribution Ubuntu ?
-- est ce que `ll` est définie comme alias ?
+- par exemple est ce que `ll` est définie comme alias pour le user root ?
 
 ## setup du container
 
@@ -136,7 +136,7 @@ echo -e "daemon off;\n\nevents {\n worker_connections 1024;\n}\n\nhttp {\n serve
 
 ### Démarrez le server nginx
 
-Ce n'est pas nécessaire pour la suite de l'exercice mais cela permet de vérifier que tout fonctionne comme prévu.
+Ce n'est pas nécessaire pour le bon fonctionnement du container mais cela permet de vérifier que tout fonctionne comme prévu.
 
 ```bash
 nginx
@@ -148,16 +148,23 @@ Profitez en pour lister les processus liés à nginx avec `ps` aux et `grep`
 ps -ef | grep nginx
 ```
 
-Enfin, sortez du container en l'arrêter avec `exit`
+Enfin, sortez du container en l'arrêtant avec `exit`
 
-L'image est configurée.
+L'image est configurée avec les bonnes librairies.
+
 On va maintenant la cloner / copier et la renommer.
 
 ### Docker commit
 
-`docker commit` crée une nouvelle image à partir d'un container. C'est utile pour capturer les changements fait à l'intérieur du container (installation, configuration, etc... ) et les sauvegarder dans une nouvelle image.
+> `docker commit` crée une nouvelle image à partir d'un container.
 
-La commande suit : `docker commit <nom_du_container> <nom_de_image>`
+La commande suit:
+
+```bash
+docker commit <nom_du_container> <nom_de_image>
+```
+
+C'est utile pour capturer les changements fait à l'intérieur du container (installation, configuration, etc... ) et les sauvegarder dans une nouvelle image.
 
 Donc on crée la nouvelle image `my_nginx_alpine:v1` à partir du container appelé `nginx_container` avec :
 
@@ -165,7 +172,9 @@ Donc on crée la nouvelle image `my_nginx_alpine:v1` à partir du container appe
 docker commit nginx_container my_nginx_alpine:v1
 ```
 
-Vérification en listant les images avec :
+Notez qu'on tag l'image avec `v1`
+
+Vérification que la nouvelle image existe bien en listant les images avec :
 
 ```bash
 docker images
@@ -173,7 +182,13 @@ docker images
 
 ### Lancez le container
 
-Run un nouveau container en associant (mapping) le port interne 80 du container au port externe 8080 sur le host : `8080:80`.
+Run un nouveau container
+
+- en mode détaché `-d`
+- en associant (mapping) le port interne 80 du container au port externe 8080 sur le host : `-p 8080:80`.
+- en spécifiant le nom du container avec `-name`
+
+ici on appelle le container `my_nginx_server`
 
 > Les correspondances entre host et container sont toujours dans le sens : `host:container`.
 
