--- a/docs/03/S03.03.tag-n-push.md
+++ b/docs/03/S03.03.tag-n-push.md
@@ -1,10 +1,14 @@
 # Publiez un image sur Docker Hub
 
-Le processus de publication d'une image locale sur un repository remote comme docker hub est en N étapes:
+Le processus de publication d'une image locale sur un repository remote comme docker hub est en 3 étapes:
+
+- login
+- tag
+- push
 
 ## Le tagging
 
-Tagger une image avec ne copie pas l'image, mais l'associe juste à un (ou plusieurs) mots clefs.
+Tagger une image ne copie pas l'image, mais l'associe juste à un (ou plusieurs) mots clefs.
 
 - Il est possible de tagger une image avec plusieurs tags.
 - La commande `docker images` liste tous les tags associés aux images. Vous voyez votre image listé plusieurs fois mais avec la même ID
@@ -28,11 +32,12 @@ docker tag abc123 myapp:v1.0
 ```
 
 Cette commande crée l'alias `myapp:v1.0` pour l'image en question.
+
 On peut ensuite la référencer non plus par son ID mais par son alias `myapp:v1.0`
 
 ### Remote Repositories
 
-Tagger l'image permet aussi de lier l'image à un (ou plusieurs) repository remote pour pouvoir la publier (`push`) sur le repository
+Tagger l'image permet aussi de lier l'image à un repository remote pour pouvoir la publier (`push`) sur le repository
 
 On peut ainsi tagger l'image `myapp` avec le username du repository
 
@@ -40,11 +45,9 @@ On peut ainsi tagger l'image `myapp` avec le username du repository
 - avec le mot clé `latest` : `docker tag myapp username/myapp:latest`
 - avec un autre registry (`otheruser`) : `docker tag myapp otheruser/myapp:stable`
 
-note the whole tagging to publish on remote repos feels weird and incomplete. How does docker knows that the username:tag refers to a remote repo and is not just a local name?
-
 ## Le pushing
 
-Une fois associé / taggée avec le remote repository, on publie (`push`, upload) l'image sur le repository avec la commande
+Une fois associé par son tag avec le remote repository, on publie (`push`, upload) l'image sur le repository avec la commande
 
 ```bash
 docker push username/image:tag
@@ -62,7 +65,7 @@ Le process pour publier une image locale sur Docker Hub consiste en :
 - docker **tag** local-image-name your-username/repository-name:tag
 - docker **push** your-username/repository-name:tag
 
-### Créez votre compte et repo docker
+### Créez votre compte et repo docker hub
 
 - allez sur [https://docker.com](docker.com) et créez votre compte si vous n'en avez pas déjà un.
 - notez votre `username`. Il vous servira à tagger l'image.
@@ -121,7 +124,7 @@ On a 2 stratégies pour stocker les images sur Docker Hub.
 
 #### 1 repo, plusieurs applications
 
-Dans le repository, le nom local et le tag se  merge en un nouveau tag `my_nginx_alpine-v1`.
+Dans le repository, le nom local et le tag se merge (se fonde) en un nouveau tag `my_nginx_alpine-v1`.
 
 Dans la commande tag: on nomme l'image avec son identifiant en remote
 
@@ -135,14 +138,14 @@ Cela permet de stocker plusieurs images dans le même repository mais le nom de 
 
 #### Une repo par projet
 
-En fait, il est plus habituel d'avoir un repository par application. Le nom du repository devient alors le nom de l'appli cad le nom de l'image et le tag de l'image reste le tag (version, latest, ...).
+En fait, il est plus courant d'avoir un repository par application. Le nom du repository devient alors le nom de l'appli cad le nom de l'image et le tag de l'image reste le tag (version, latest, ...).
 
-Par exemple:
+Par exemple pour 2 repo:
 
-- skatai/nginx-demo:01
-- skatai/hello-world:latest
+- `skatai/nginx-demo:01`
+- `skatai/hello-world:latest`
 
-Cependant, il n'est pas possible d'utiliser la commande docker pour creer des repositories sur Docker hub.  Il faut passer par l'interface web.
+Cependant, il n'est pas possible d'utiliser la commande docker pour créer des repositories sur Docker hub.  Il faut passer par l'interface web.
 
 Comme nous allons créer plusieurs applications il est plus simple de les stocker toutes dans le même repository en jouant sur la composition du tag de l'image.
 
