--- a/docs/03/S03.04.dockerfiles.md
+++ b/docs/03/S03.04.dockerfiles.md
@@ -47,7 +47,7 @@ A partir de ce fichier **Dockerfile**, on construit l'image avec;
 docker build .
 ```
 
-Si le nom du Dockerfile n'est pas ... Dockerfile (par exemple Dockerfile.dev ou Dockerfile.test)
+Si le nom du Dockerfile n'est pas ... `Dockerfile` (par exemple Dockerfile.dev ou Dockerfile.test)
 
 ```bash
 docker build -f nom_du_dockerfile .
@@ -105,9 +105,7 @@ Chaque layer est en lecture seule et s'appuie sur le layer en dessous, formant u
 
 En résumé, les layers Docker sont comme des modifications incrémentales du système de fichiers qui, ensemble, constituent une image complète et exécutable.
 
-<https://www.youtube.com/watch?v=wJwqtAkmtQA>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/wJwqtAkmtQA?si=5TVNBocps0luIlaL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<https://www.youtube.com/watch?v=oxAguWSpI_I>
 
 ## Premier Dockerfile
 
@@ -117,7 +115,7 @@ Il y a un unique Dockerfile par projet (sauf s'il y en a plusieurs pour les envi
 
 La convention est que le fichier Dockerfile soit nommé `Dockerfile` et qu'il réside à la racine du projet.
 
-Dans la suite nous créerons un répertoire par projet qui contiendra le Dockerfile du projet
+Dans la suite, nous créerons un répertoire par projet qui contiendra le Dockerfile du projet
 
 ![apps and Dockerfiles](./../../img/apps-dockerfiles.png)
 
@@ -155,7 +153,7 @@ On obtient:
 et maintenant on peut lancer le container:
 
 ```bash
-docker run hello-world:01
+docker run --rm hello-world:01
 ```
 
 ce qui retourne
@@ -253,7 +251,7 @@ Une fois le fichier Dockerfile écrit et sauvegardé
 
 - créez l'image avec `docker build`
 - taguez avec `-t` et le nom `nginx-demo:01`
-- n'oubliez pas d'ajouter le '.' à la fin de la commande pour indiquer que le Dockerfile réside dans le répertoire courant.
+- n'oubliez pas d'ajouter le `.` à la fin de la commande pour indiquer que le Dockerfile réside dans le répertoire courant.
 
 `docker build` va par défaut lire le fichier Dockerfile.
 
@@ -338,7 +336,13 @@ docker tag nginx-demo:01 skatai/ynov-docker:nginx-demo-01
 docker push skatai/ynov-docker:nginx-demo-01
 ```
 
-### docker search
+## Enregistrez votre image dans le formulaire
+
+Une fois l'image publiée, remplissez le formulaire avec le tag de l'image en face de votre nom:
+
+<https://docs.google.com/spreadsheets/d/17jjXXb-bJhaosVoTLk1c_JKSaDfPklLyXYP4lUPErQk/edit?gid=0#gid=0>
+
+## docker search
 
 `docker search` fait une recherche sur les images publiques. C'est comme cela que l'on peut trouver les versions des images ubuntu, nginx etc ...
 
@@ -353,12 +357,6 @@ docker search skatai | grep skatai
 ```
 
 ![docker search skatai grep](./../../img/docker-search-skatai-grep.png)
-
-## Enregistrez votre image dans le formulaire
-
-Une fois l'image publiée, remplissez le formulaire avec le tag de l'image en face de votre nom:
-
-<https://docs.google.com/spreadsheets/d/17jjXXb-bJhaosVoTLk1c_JKSaDfPklLyXYP4lUPErQk/edit?gid=0#gid=0>
 
 ## Autres exemples de Dockerfile
 
