--- a/docs/04/S04.02.images.optimisation.md
+++ b/docs/04/S04.02.images.optimisation.md
@@ -22,7 +22,7 @@ Pour la plupart des environnements open source ou propriétaires, il existe des 
 
 `docker search <mot clef>` retourne la liste des images disponibles.
 
-On peut filtrer les resultats avec filter
+On peut filtrer les résultats avec filter
 
 - is-official=true|false: Filter for official Docker images.
 - is-automated=true|false: Filter for automated build images.
