--- a/docs/03/S03.05.python-hello-world.md
+++ b/docs/03/S03.05.python-hello-world.md
@@ -19,7 +19,7 @@ mkdir flask-api
 cd flask-api
 ```
 
-Copier le code dans un fichier `app.py`.
+Copier le code suivant dans un fichier `app.py`.
 
 ```python
 # app.py
@@ -163,27 +163,27 @@ def hello():
     return message
 ```
 
-et il faut aussi immporter `request`.
+et il faut aussi importer `request`.
 
 ```python
 from flask import Flask, request
 ```
 
-Pour que les changements de code soient pris en compte il faut ... re-build l'image et relancer le container.
+Pour que les **changements de code soient pris en compte** il faut builder l'image à nouveau et relancer le container.
 
-A chaque fois cela crée une nouvelle image et un nouveau container.
+MAIS: A chaque fois cela crée une nouvelle image et un nouveau container.
 
 Ce n'est pas pratique!
 
-> Pour éviter de reconstruire l'image Docker à chaque modification du code, il faut  monter le répertoire de code local dans le conteneur Docker en cours d'exécution.
+## Mounts
+
+> Pour éviter de reconstruire l'image Docker à chaque modification du code, il faut monter le répertoire de code local dans le conteneur Docker en cours d'exécution.
 
 De cette manière, les modifications de code sont immédiatement reflétées à l'intérieur du conteneur, sans avoir besoin de reconstruire l'image.
 
-## Mounts
+Pour lier un repertoire sur le host à un repertoire dans le container, on parle de **Bind Mounts**.
 
-Pour lier un repertoire sur le host à un repertoire dans le container, on parle de Bind Mounts.
-
-On peut associer les répertoires local <-> container au moment de lancer le container avec le flag `-v`
+On peut associer les répertoires du host au container au moment de lancer le container avec le flag `-v`
 
 ```bash
 docker run -d -v /path/on/host:/folder_in_container image_name
@@ -199,12 +199,13 @@ docker run -d -v  $(pwd):/app -p 5001:5000 flask-api
 
 ## Volume
 
-La commande VOLUME dans un Dockerfile permet elle de déclarer un esapce de stokcage persistent au dela du cylce de vie du container.
-Cet espace reside dans Docker et non pas sur le host.
+La commande VOLUME dans un Dockerfile permet elle de déclarer un espace de stockage persistent au dela du cycle de vie du container. Attention: **l'espace défini par `VOLUME` réside dans Docker et non pas sur le host**.
 
-L'idee est de permettre de sticker des données meme quand le container n'existe plus ou est stoppé.
+L'idée est de permettre de stocker des données meme quand le container n'existe plus ou est stoppé.
 
-- un container ecrit les données, un autre les lit: cache, microservices, partage de logs, ...
+et de partager les données entre plusieurs containers.
+
+- un container écrit les données, un autre les lit: cache, microservices, partage de logs, ...
 
 ```dockerfile
 VOLUME /shared-data
@@ -228,7 +229,7 @@ VOLUME /app/cache
 
 Pour accéder au données contenues dans le VOLUME,
 
-Lorsque que l'on RUn le container on peut monter le VOLUME sur un repertoire host en utilisant le flag `-v`
+Lorsque que l'on RUN le container on peut monter le VOLUME sur un repertoire host en utilisant le flag `-v`
 
 par exemple
 
@@ -237,12 +238,11 @@ docker run -d --name my_container -v my_logs:/var/log/app my_image
 ```
 
 - `my_logs`: This is the named volume that will persist data.
-- `/var/log/app`: Le repertoire où sont stockes les logs a l/intereru ddu container
-The directory inside the container where logs are stored.
+- `/var/log/app`: Le repertoire où sont stockés les logs a l'interieur du container
 
-Si le container est stoppé ou n'existe plus on peut accéder au données déclarées dans le VOLUME
+#### Meme quand le container n'existe plus
 
-- container temporaire juste pour accéder aux données
+Si le container est stoppé ou n'existe plus on peut quand meme accéder au données déclarées dans le VOLUME avec un container temporaire créé juste pour accéder au VOLUME
 
 ```bash
 docker run --rm -v my_logs:/logs busybox ls /logs
@@ -262,26 +262,26 @@ docker run --rm -it -v my_logs:/logs busybox sh
 
 Inside the `sh` shell, you can explore and copy files from the `/logs` directory.
 
-Les volumes ainsi déclarée sont visible et manageables par la commande
+Les volumes ainsi déclarée sont visibles et manageable par la commande
 
 ```bash
 docker volume ls
 ```
 
-## Live coding
+## VOLUME vs `-v`
 
-Il ne faut utiliser `VOlUME` dans le Dockerfile que si l'on veut déclarer un espace de stockage persistent qui est gére par Docker. C'est utile pour les données persistantes comme pour les bases de données.
+Pour des mise à jour en continu pendant le développement, il faut utiliser `-v` quand on lance le container.
 
-En résumé, pour des mise a jour en continu pendant le développement, il suffit d'utiliser `-v` quand on lance le container.
+Il ne faut utiliser `VOlUME` dans le Dockerfile que si l'on veut déclarer un espace de stockage persistent qui est géré par Docker. C'est utile pour les données persistantes comme pour les bases de données.
 
 ## Final
 
 - supprimer le container après l'avoir stoppé
 - ajouter un fichier `.dockerignore` avec au moins Dockerfile
 - relancer le container en montant le rep local au rep container /app
-- Modifiez la fonction hello() dans app.py pour admettre un message d'ans l'url
+- Modifiez la fonction `hello()` dans `app.py` pour admettre un message comme variable dans l'url
 - vérifiez que ça marche en accédant a `localhost:5001?text="Bonjour"`
-- le message `salut` doit apparaitre sur la page
+- le message `Bonjour` doit apparaitre sur la page
 
 ensuite:
 
